emqxtls/ingressroutetcp-emqx.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRouteTCP
metadata:
  name: my-emqx-ingressroute
  namespace: default
spec:
  entryPoints:
    - mqtt
  routes:
  - match: HostSNI(`emqxtlsdemo.stevegriffith.io`)
    services:
    - name: my-emqx
      namespace: default
      port: 8883
  tls:
    passthrough: false
    secretName: emqxtlsdemo.stevegriffith.io
